# skill_tracker_auth

./: .coverage  .flake8  .pre-commit-config.yaml  .pylintrc  docker-compose.localstack.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: gh_actions_tests_pre_commit.yaml
alembic/: env.py
auth_app/: .coverage  config.py  connect_db.py  dependencies.py  main.py
auth_app/db/: connect_db.py  connect_redis.py
auth_app/exeptions/: custom.py  handlers.py
auth_app/messages/: common.py
auth_app/middleware/: db_session.py
auth_app/models/: __init__.py  tokens.py  users.py
auth_app/repositories/: tokens.py  users.py
auth_app/routers/: sign_up.py  tokens.py  users.py
auth_app/schemas/: sign_up.py  tokens.py  users.py
auth_app/schemes/: email.py  tokens.py  users.py
auth_app/scripts/: create_external_network.sh
auth_app/services/: email_verification.py  pwd_hashing.py  send_otp_email.py  service_container.py  tokens.py  users.py
auth_app/services/aws/: clients.py  email_verification.py  pwd_reset.py  send_otp_email.py
auth_app/services/aws/ses/: base.py  clients.py  pwd_reset.py  send_otp_email.py
auth_app/services/fields/: base.py  email_verification.py  users.py
auth_app/services/ses/: base.py  clients.py  email_verification.py  pwd_reset.py  send_verification_code.py  ses_handler.py
auth_app/services/tokens/: authenticate_user.py  general.py  jwt.py
auth_app/services/users/: verification.py
auth_app/services/utils/: authenticate_user.py  jwt_handler.py  pwd_hashing.py  token_handler.py  verification.py
migrations/: env.py
migrations/versions/: 4bf6a5e88dbd_.py  80163e3cf70a_init.py  825ca26348cc_.py  d15a5dcf6f46_.py
tests/: conftest.py
tests/config/: test_config.py
tests/general/: test_messages.py
tests/schemes/: test_email.py  test_tokens.py  test_users.py
tests/services/: test_ses.py  test_tokens.py  test_users.py
tests/services/utils/: test_general_services.py  test_jwt_handler.py  test_token_handler.py
