[project]
name = "skill-tracker-auth"
version = "0.1.0"
description = ""
authors = [
    { name = "AlexandrSmolyachkovGH", email = "alexandr.smolyachkov@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "pyjwt[crypto] (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "pylint (>=3.3.7,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "aioboto3 (>=14.3.0,<15.0.0)",
    "redis[asyncio] (>=6.2.0,<7.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "bcrypt (<4.1.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.black]
line-length = 79
target-version = ['py310']
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | settings\.py
  | venv
  | env
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip = [
    "settings.py",
    ".venv",
    "env",
    "build",
    "dist",
    "migrations",
    "__pycache__",
    ".git",
    ".env",
    ".idea"
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = '(.*/migrations/.*$|.*/settings.*$)'
